[package]
name = "gotham-repro"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]

[dependencies]
gotham = { git = "https://github.com/gotham-rs/gotham.git" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham.git" }
hyper = "~0.11.11"
mime = "~0.3.5"
serde = "~1.0.27"
serde_derive = "~1.0.27"
serde_json = "~1.0.9"
slog = "~2.1.1"
slog-async = "~2.2.0"
slog-term = "~2.3.0"
sloggers = "~0.2.5"
