[package]
name = "gotham-repro"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]

[dependencies]
futures = "~0.1.17"
futures-await = "~0.1.0"
gotham = { path = "../gotham" }
gotham_derive = { path = "../gotham/gotham_derive" }
hyper = "~0.11.11"
serde = "~1.0.27"
serde_derive = "~1.0.27"
serde_json = "~1.0.9"
log = "~0.4.1"
